--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class='qr-code-container'>
     <div class='content'>
-      <img class='image' src='./images/image-qr-code.png' />
+      <img class='image' src='./images/image-qr-code.png' alt="qr-code" />
       <h3 class='heading'> Improve your front-end skills by building projects </h3>
       <p class='description'> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
       </p>
